Update: Show 'Хит' label only on tablet version for popcorn product

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STore</title>
-    <link rel="stylesheet" href="rocket.css">
+    <link rel="stylesheet" href="styles/main.scss">
 </head>
 <body>
     <header class="hero">
@@ -118,8 +118,9 @@
                             <div class="product-card__image">
                                 <img src="i/popcorn.jpg" alt="...">
                                 <div class="product-card__label">
-                                    <span class="discount">-31%</span>
                                     <span class="day-product">Товар дня</span>
+                                    <span class="sale">-31%</span>
+                                    <span class="hit">Хит</span>
                                 </div>
                                 <button class="btn-favorite">
                                     <svg viewBox="0 0 24 24">
@@ -163,7 +164,7 @@
                                 </button>
                             </div>
                             <div class="product-card__info">
-                                <h3>Эскимо с малиной, 150 г</h3>
+                                <h3>Эскимо с малиной,<br> 150 г</h3>
                                 <div class="product-card__price">
                                     <span>190 ₽</span>
                                     <button class="btn btn--green btn--form">Оставить заявку</button>
@@ -186,6 +187,7 @@
                         <div class="product-card__label">
                             <span class="day-product">Товар дня</span>
                             <span class="sale">-31%</span>
+                            <span class="hit">Хит</span>
                         </div>
                         <button class="btn-favorite">
                             <svg viewBox="0 0 24 24">
